--- a/算法技巧及模板总结.md
+++ b/算法技巧及模板总结.md
@@ -258,6 +258,150 @@ int qpow(int a, int n, int mod) {
 
 
 
+##  时间类的问题
+
+这种题最开始遇到的时候感觉很麻烦，一般会给出形如`hh:mm:ss`这种的字符串，给出一种思考的方向，也就是可以尝试先将所有都转化成秒的形式，可以用一个lambda表达式写一个函数来实现。有时还会遇到这样一种情况，就是要输出`hh:mm:ss`。
+
+**转化成秒**
+
+```cpp
+auto trans = [&]() {
+    string s;
+    cin >> s;
+    return stoi(s.substr(0, 2))*3600+stoi(s.substr(3, 2))*60+stoi(s.substr(6, 2));
+}; 
+```
+
+
+
+**输出hh:mm:ss**
+
+```cpp
+printf("%02lld:%02lld:%02lld\n", h, m, s);
+```
+
+之所以用lld是因为h，m，s都是long long类型的，这个的作用就是保证hms输出都是两位数，如果是一位数就有前导0补充
+
+
+
+##  判断平方数
+
+```cpp
+int tmp = sqrt(num);
+if(num == tmp*tmp) cout << "是平方数";
+else cout << "不是平方数";
+```
+
+
+
+##  字符串api
+
+- `slower(char c)` 是否为小写字母
+- `isupper(char c)` 是否为大写字母
+- `isdigit(char c)` 是否为数字
+- `isalpha(char c)` 是否为字母
+- `isalnum(char c)` 是否为字母或者数字
+- `toupper(char c)` 字母小转大
+- `tolower(char c)` 字母大转小
+- `substr(i, len)`字符串截取，从下标i开始，截取len个字符
+
+
+
+##  数位之和两种写法---循环、字符串
+
+```cpp
+//写法一：
+int target = 3487568927346, ans = 0;
+for(int t = target; t > 0; t /= 10) ans += target%10;
+
+//写法二：
+int target = 3487568927346, ans = 0;
+string s = to_string(target);
+for(char c : s) ans += c-'0';
+```
+
+
+
+##  求素数的三种方法(式除法、埃式筛、线性筛或称欧拉筛)
+
+也是接受了之前一直很难理解的东西了，果然以前弄不懂的最终还是会给自己一个暴击！这个求素数的题出现在牛客练习赛129上。
+**试除筛**
+
+```cpp
+void solve() {
+    int n;
+    cin >> n;
+    auto isprime = [&](int x) {
+        if(x < 2) return false;
+        for(int i = 2; i*i <= x; i++) {
+            if(x%i == 0) return false;
+        }
+        return true;
+    };
+    //输出n以内的素数
+    for(int i = 2; i <= n; i++) {
+        if(isprime(i)) cout << i << " ";
+    }
+}
+```
+
+这里有一点点的优化就是`i*i <= x`，这是通过性质来判断的，如果i是x的一个因子，那么x/i也会是x的一个因子，这两个因子又分居在根号n的左右两端，所以循环条件在`i*i <= x`即可
+
+
+
+**埃式筛**
+
+```cpp
+void solve() {
+    int n;
+    cin >> n;
+    vector<bool> isPrime(n+1, true);
+    for(int i = 2; i <= n; i++) {
+        //是素数
+        if(prime[i]) {
+            for(int j = i*i; j <= n; j += i) {
+                prime[j] = false;
+            }
+        }
+    }
+
+    for(int i = 2; i <= n; i++) {
+        if(prime[i]) cout << i << " ";
+    }
+}
+```
+
+先判断是否为素数，如果为素数那么再进行将后面的合数筛选掉
+
+
+
+**线性筛（欧拉筛）**
+
+```cpp
+void solve() {
+    int n;
+    cin >> n;
+    vector<int> primes;
+    vector<bool> isPrime(n+1, true);
+    for(int i = 2; i <= n; i++) {
+        //是素数
+        if(isPrime[i]) primes.push_back(i);
+        for(int j = 0; j < primes.size() && i*primes[j] <= n; j++) {
+            isPrime[i*primes[j]] = false;
+            if(i%primes[j] == 0) break;
+        }
+    }
+
+    for(auto p : primes) cout << p << " ";
+}
+```
+
+不同于埃式筛，这里是从最小质因数开始筛，因为埃式筛会有很多重复筛的地方，比如12和18，他们先后会被2和3筛，所以会有重复的地方，用线性筛就只会被2筛掉
+
+
+
+
+
 
 
 ##  思考问题的启发
@@ -271,6 +415,12 @@ int qpow(int a, int n, int mod) {
 ###  正难则反
 
 打一个比方，假如题干中要求的是...的最小次数、长度之类的，从反面思考就可以想成求出最长的符合条件的次数，然后用整体减去这个最长的一面，得到的答案就是这个最短的一面了
+
+
+
+###  遇事不决先排序
+
+当题中给出某些大小关系才能给出答案的字眼中，并且答案和顺序无关的时候可以先排序看看问题能不能变得简便很多
 
 
 
