补题西南科技大学新生赛

--- a/练习赛合集.md
+++ b/练习赛合集.md
@@ -885,7 +885,7 @@ func minElement(nums []int) int {
 class Solution {
 public:
     long long maximumTotalSum(vector<int>& maximumHeight) {
-        long long ans = 0, now = 1e10;
+        long long ans = 0, now = 1e10;	//当前未被使用的最大值
         sort(maximumHeight.rbegin(), maximumHeight.rend());
         for(int x : maximumHeight) {
             now = min(now, 1LL*x);
@@ -898,7 +898,7 @@ public:
 };
 ```
 
-
+这里的now表示当前还未被使用的最大值，比赛时思路其实是对的，只不过就是思维定式留在了哈希表上，没有想过用别的方法来解这个题，有想过cnt，但是没有想到过这个now变量，其实也是有点像枚举右维护左的思维，只不过这个数组是从大到小排序的
 
 
 
@@ -909,8 +909,6 @@ public:
 ###  周赛417
 
 ####  找出第k个字符I
-
-模拟法：
 
 ```cpp
 class Solution {
@@ -930,6 +928,46 @@ public:
 ```
 
 
+
+
+
+####  元音辅音字符串计数I&II
+
+```cpp
+class Solution {
+public:
+    long long countOfSubstrings(string word, int k) {
+        auto check = [&](char c) {
+            return c == 'a' || c == 'e' || c == 'i' || c == 'o' || c == 'u';
+        };
+        
+        auto f = [&](int bit) {
+            long long ans = 0;
+            int l = 0, cntk = 0, n = word.size();
+            unordered_map<char, int> cnt;
+            for(int r = 0; r < n; r++) {
+                if(check(word[r])) cnt[word[r]]++;
+                else cntk++;
+                //这里while循环里面的条件是cntk>=bit，bit是整个函数传进来的参数别搞错了！
+                while(cnt.size() == 5 && cntk >= bit) {
+                    char out = word[l];
+                    if(check(out)) {
+                        if(--cnt[out] == 0) cnt.erase(out);
+                    } else {
+                        cntk--;
+                    }
+                    l++;
+                }
+                ans += l;
+            }
+            return ans;
+        };
+        return f(k)-f(k+1);
+    }
+};
+```
+
+又是滑动窗口，但是我有没写出来，怎么刷题速度就是跟不上出题速度呢？这个类型的题目转化其实也是出现在灵神的提单中了，但是我还是没刷到，唉怎么就我总是慢一步呢？这一题主要是要学会转化问题的思想，大致解题思路依然还是滑动窗口，只不过是问题的方式变了，如果让我们求至少为k个辅音字母就是符合越长越合法的题型了，而这里就是改变的一个恰好俩字，又给我整傻了，问题转化的方法就是将这个恰好为k转化成大于等于k的情况-大于等于k+1的情况。当然也可以想成小于等于k的情况-小于等于k-1的情况，只不过这一题像小于的情况不会很好写
 
 
 
@@ -1668,6 +1706,80 @@ void solve() {
 ```
 
 巩固一下快速幂的写法，并纠正了对快速幂的理解，其实快速幂这个函数的意思是求x为底数n为指数的结果，当初一直认为快速幂只能求以2为底数的幂。。。再就是要发掘这个数学关系很重要，推到不出来这个数学结论也很刺挠，C(m,k)的组合数之和为`2^m`
+
+
+
+###  2024西南科技新生赛
+
+####  E.时间魔咒
+
+```cpp
+void solve() {
+    string time;
+    cin >> time;
+    int h = stoi(time.substr(0, 2)), m = stoi(time.substr(3, 2));
+
+    auto check = [&]() -> bool {
+        return h/10 == m%10 && h%10 == m/10;
+    };
+
+    for(int i = 0; i <= 1440; i++) {
+        if(check()) {
+            printf("%02lld:%02lld\n%lld\n", h, m, i);
+            return;
+        }
+        m++;
+        if(m == 60) {
+            m = 0;
+            h++;
+        }
+        if(h == 24) h = 0;
+    }
+}
+```
+
+整体思路是枚举时间，确实是没有想到的，然后就是输出结果上也是没有遇到过的方式，算是总结经验了
+
+
+
+####  J.选歌
+
+```cpp
+void solve() {
+    int n, hp;
+    cin >> n >> hp;
+    vector<pair<int, int>> b(n);
+
+    for(int i = 0; i < n; i++) {
+        cin >> b[i].first;
+        b[i].first *= -1;   //这一步真的妙 省了写cmp函数
+        b[i].second = i+1;
+    }
+
+    sort(b.begin(), b.end());
+
+    int flag = 0;
+    for(int i = 0; i < n; i++) {
+        hp += b[i].first;
+        if(hp <= 0) {
+            flag = i;
+            break;
+        }
+    }
+
+    if(hp <= 0) {
+        cout << "YES\n" << flag+1 << "\n";
+        for(int i = 0; i <= flag; i++) {
+            cout << b[i].second << " ";
+        }
+        cout << "\n";
+    } else {
+        cout << "NO\n";
+    }
+}
+```
+
+就是难在了题干中写的优先选消耗大且下标小的这一句话上，主要也是忘记了怎么写仿函数了。。。但是看大佬写的这个真的厉害，输入的时候直接乘上-1，其实就是做到了从大到小排序
 
 
 
