--- a/算法技巧及模板总结.md
+++ b/算法技巧及模板总结.md
@@ -206,6 +206,78 @@ function<int(int)> dfs = [&](int i) -> int{
 
 
 
+##  回溯
+
+通常有两种思路，分别是选或不选和选哪个的思维，感觉都不是很好理解。目前也判断不出来什么题型一定用哪一个更好，目前只能是试错阶段了，做题的时候那就两种方法都思考一下吧
+
+###  子集型
+
+一定要搞清楚子集的概念吧，拿78题为例，有三个元素的数组，那么它的子集个数就为2的3次幂个，下面给出两种实现方法，选或不选和枚举选哪个
+
+选或不选：
+
+```cpp
+class Solution {
+public:
+    vector<vector<int>> subsets(vector<int>& nums) {
+        vector<vector<int>> ans;
+        vector<int> path;
+        int n = nums.size();
+
+        auto dfs = [&](auto&& dfs, int i) -> void {
+            if(i == n) {
+                ans.push_back(path);
+                return;
+            }
+
+            //不选
+            dfs(dfs, i+1);
+
+            //选
+            path.push_back(nums[i]);
+            dfs(dfs, i+1);
+            path.pop_back();
+        };
+
+        dfs(dfs, 0);
+        return ans;
+    }
+};
+```
+
+
+
+枚举选哪个：
+
+```cpp
+class Solution {
+public:
+    vector<vector<int>> subsets(vector<int>& nums) {
+        vector<vector<int>> ans;
+        vector<int> path;
+
+        int n = nums.size();
+        auto dfs = [&](auto&& dfs, int i) -> void {
+            ans.push_back(path);
+
+            for(int j = i; j < n; j++) {
+                path.push_back(nums[j]);
+                dfs(dfs, j+1);
+                path.pop_back();
+            }
+        };
+
+        dfs(dfs, 0);
+
+        return ans;
+    }
+};
+```
+
+
+
+
+
 
 
 ##  乘法逆元
