--- a/十月刷题笔记.md
+++ b/十月刷题笔记.md
@@ -1044,3 +1044,303 @@ public:
 ```
 
 接下来就开始复习bfs的题了，建图就没什么好说的了，首先说说这一题只能用bfs来做，题干中很明显给出了求出最短路径长度，所以这一题暴力的思路就是每次添加边之后bfs一次，然后再维护答案。这里的题解是看的蛙神写的，它这里在每次的bfs中定义了一个dis数组，dis[n-1]就表示的是0到n-1的距离，所以bfs每次返回的就是dis[n-1]，和之前做的矩阵中bfs有一点点区别就是这里并不需要定义方向数组
+
+
+
+##  78.子集(回溯)
+
+枚举选哪个：
+
+```cpp
+class Solution {
+public:
+    vector<vector<int>> subsets(vector<int>& nums) {
+        vector<vector<int>> ans;
+        vector<int> path;
+        int n = nums.size();
+        
+        auto dfs = [&](auto&& dfs, int i) -> void {
+            ans.push_back(path);
+
+            for(int j = i; j < n; j++) {
+                path.push_back(nums[j]);
+                dfs(dfs, j+1);
+                path.pop_back();
+            }
+        };
+
+        dfs(dfs, 0);
+
+        return ans;
+    }
+};
+```
+
+
+
+选或不选：
+
+```cpp
+class Solution {
+public:
+    vector<vector<int>> subsets(vector<int>& nums) {
+        vector<vector<int>> ans;
+        vector<int> path;
+        int n = nums.size();
+
+        auto dfs = [&](auto&& dfs, int i) -> void {
+            if(i == n) {
+                ans.push_back(path);
+                return;
+            }
+
+            //不选
+            dfs(dfs, i+1);
+
+            //选
+            path.push_back(nums[i]);
+            dfs(dfs, i+1);
+            path.pop_back();
+        };
+
+        dfs(dfs, 0);
+        return ans;
+    }
+};
+```
+
+
+
+
+
+##  51.N皇后(排列型回溯)
+
+```cpp
+class Solution {
+public:
+    vector<vector<string>> solveNQueens(int n) {
+        vector<vector<string>> ans;
+        vector<int> col(n), onPath(n, false), diag1(2*n-1), diag2(2*n-1);
+
+        auto dfs = [&](auto&& dfs, int r) -> void {
+            if(r == n) {
+                vector<string> board(n);
+                for(int i = 0; i < n; i++) {
+                    board[i] = string(col[i], '.') + 'Q' + string(n-1-col[i], '.');
+                }
+                ans.emplace_back(board);
+                return;
+            }
+
+            for(int c = 0; c < n; c++) {
+                int rc = r-c+n-1;
+                if(!onPath[c] && !diag1[c+r] && !diag2[rc]) {
+                    col[r] = c;
+                    onPath[c] = diag1[c+r] = diag2[rc] = true;
+                    dfs(dfs, r+1);
+                    onPath[c] = diag1[c+r] = diag2[rc] = false;
+                }
+            }
+        };
+
+        dfs(dfs, 0);
+
+        return ans;
+    }
+};
+```
+
+过了这么久回过头来看n皇后也是终于看得懂了，首先我就是被这个答案输出的形式给吓到了，这和我学过的排列型回溯有啥关系？其实意思就是对col数组进行了一个有限定的排列，这真的很难想到啊。然后就是对不同一斜线上的限定，题解是定义了两个bool数组diag1和diag2，它们的长度初始化也很有讲究，一定是2 *n -1否则在对diag2操作的时候可能出现下标越界。为什么能达到斜线操作的效果呢？对于当前[c,l]，右上角都满足c+l相等(对应diag1)，左上角都满足r-c相等(对应diag2)
+
+
+
+##  198.打家劫舍(记忆化搜索、dp)
+
+记忆化搜索：
+
+```cpp
+class Solution {
+public:
+    int rob(vector<int>& nums) {
+        int n = nums.size();
+        vector<int> memo(n, -1);
+        auto dfs = [&](auto&& dfs, int i) -> int {
+            if(i < 0) return 0;
+            int& res = memo[i];
+            if(res != -1) return res;
+            return res = max(dfs(dfs, i-1), dfs(dfs, i-2)+nums[i]);
+        };
+
+        return dfs(dfs, n-1);
+    }
+};
+```
+
+
+
+dp：
+
+```cpp
+class Solution {
+public:
+    int rob(vector<int>& nums) {
+        int n = nums.size();
+        vector<int> dp(n+2);
+        for(int i = 0; i < n; i++) {
+            dp[i+2] = max(dp[i+1], dp[i]+nums[i]);
+        }
+        return dp[n+1];
+    }
+};
+```
+
+
+
+
+
+##  70.爬楼梯(记忆化搜索、dp)
+
+记忆化搜索：
+
+```cpp
+class Solution {
+public:
+    int climbStairs(int n) {
+        vector<int> memo(n+1, -1);
+        auto dfs = [&](auto&& dfs, int i) -> int {
+            if(i <= 1) return 1;
+            int& res = memo[i];
+            if(res != -1) return res;
+            res = dfs(dfs, i-1)+dfs(dfs, i-2);
+            return res;
+        };
+        return dfs(dfs, n);
+    }
+};
+```
+
+
+
+dp：
+
+```cpp
+class Solution {
+public:
+    int climbStairs(int n) {
+        vector<int> dp(n+1);
+        dp[0] = 1, dp[1] = 1;
+        for(int i = 2; i <= n; i++) {
+            dp[i] = dp[i-1]+dp[i-2];
+        }
+        return dp[n];
+
+    }
+};
+```
+
+搞清楚递归结束之后的返回值是多少，这也对应着初始值应该要是多少，可以转化成文字的形式理解，比如跳到第0层或则第1层都是一种情况，也就是刚开始和只跳一步到台阶1上。然后就是转化到dp上，这一次也是写错了，感觉第一步不能是转化递推关系式，而是看递归的边界。如果结合递归边界和递推式如果不越界的话是不需要改变递推式子的。
+
+
+
+##  使用最小花费爬楼梯(记忆化搜索、dp)
+
+记忆化搜索：
+
+```cpp
+class Solution {
+public:
+    int minCostClimbingStairs(vector<int>& cost) {
+        int n = cost.size();
+        vector<int> memo(n+1, -1);
+        auto dfs = [&](auto&& dfs, int i) -> int {
+            if(i <= 1) return 0;
+
+            int& res = memo[i];
+            if(res != -1) return res;
+            res = min(dfs(dfs, i-1)+cost[i-1], dfs(dfs, i-2)+cost[i-2]);
+            return res;
+        };
+        return dfs(dfs, n);
+    }
+};
+```
+
+
+
+dp：
+
+```cpp
+class Solution {
+public:
+    int minCostClimbingStairs(vector<int>& cost) {
+        int n = cost.size();
+        vector<int> dp(n+1);
+        for(int i = 2; i <= n; i++) {
+            dp[i] = min(dp[i-1]+cost[i-1], dp[i-2]+cost[i-2]);
+        }
+        return dp[n];
+    }
+};
+```
+
+这里就错在递归边界的返回值上，还是要根据dfs的定义来判断比较好理解。dfs(i)定义为爬到i阶需要的花费，由于一开始站在第0阶或者第1阶上，那么我们到第一阶或者第二阶时是不需要花费的，所以`if(i <= 1) return 0;`
+
+
+
+
+
+##  494.目标和(记忆化搜索、dp、01背包)
+
+记忆化搜索：
+
+```cpp
+class Solution {
+public:
+    int findTargetSumWays(vector<int>& nums, int target) {
+        target += accumulate(nums.begin(), nums.end(), 0);
+        if(target < 0 || target%2) return 0;
+        int m = target /2;
+        int n = nums.size();
+        vector<vector<int>> memo(n, vector<int>(m+1, -1));
+
+        auto dfs = [&](auto&& dfs, int i, int c) -> int {
+            if(i < 0) return c == 0;
+            int& res = memo[i][c];
+            if(res != -1) return res;
+            if(c < nums[i]) return res = dfs(dfs, i-1, c);
+            return res = dfs(dfs, i-1, c) + dfs(dfs, i-1, c-nums[i]);
+        };
+        return dfs(dfs, n-1, m);
+    }
+};
+```
+
+
+
+dp：
+
+```cpp
+class Solution {
+public:
+    int findTargetSumWays(vector<int>& nums, int target) {
+        target += accumulate(nums.begin(), nums.end(), 0);
+        if(target < 0 || target%2) return 0;
+        int m = target /2;
+        int n = nums.size();
+
+        //避免下标越界
+        //dp[i+1][c] = dp[i][c] c < nums[i]
+        //dp[i+1][c] = dp[i][c]+dp[i][c-nums[i]] c >= nums[i]
+        vector<vector<int>> dp(n+1, vector<int>(m+1));
+        dp[0][0] = 1;
+        for(int i = 0; i < n; i++) {
+            for(int j = 0; j <= m; j++) {
+                if(j < nums[i]) dp[i+1][j] = dp[i][j];
+                else dp[i+1][j] = dp[i][j]+dp[i][j-nums[i]];
+            }
+        }
+        return dp[n][m];
+    }
+};
+```
+
