--- a/算法技巧及模板总结.md
+++ b/算法技巧及模板总结.md
@@ -278,6 +278,113 @@ public:
 
 
 
+###  组合型
+
+这个类型的题目还是和子集型有点像的，就是在子集的基础上添加了path的长度限定，比如77.组合这一题，path的长度就限定为了2，而且，通常从后往前遍历比较好，这样对于还能否选(剪枝)比较好思考些。后面遇到的记忆化搜索也通常是从后往前去想递推
+
+枚举选哪个：
+
+```cpp
+class Solution {
+public:
+    vector<vector<int>> combine(int n, int k) {
+        vector<vector<int>> ans;
+        vector<int> path;
+
+        auto dfs = [&](auto&& dfs, int i) -> void {
+            int d = k-path.size();
+            if(d == 0) {
+                ans.push_back(path);
+                return;
+            }
+
+            for(int j = i; j >= d; j--) {
+                path.push_back(j);
+                dfs(dfs, j-1);
+                path.pop_back();
+            }
+        };
+
+        dfs(dfs, n);
+
+        return ans;
+    }
+};
+```
+
+
+
+选或不选：
+
+```cpp
+class Solution {
+public:
+    vector<vector<int>> combine(int n, int k) {
+        vector<vector<int>> ans;
+        vector<int> path;
+
+        auto dfs = [&](auto&& dfs, int i) -> void {
+            int d = k-path.size();
+            if(d == 0) {
+                ans.push_back(path);
+                return;
+            }
+
+            //可以不选
+            if(i > d) dfs(dfs, i-1);
+
+            //选
+            path.push_back(i);
+            dfs(dfs, i-1);
+            path.pop_back();
+        };
+
+        dfs(dfs, n);
+
+        return ans;
+    }
+};
+```
+
+
+
+###  排列型
+
+对于这种类型的回溯通常用枚举选哪个更好，因为全排列每一次都是要从头到尾dfs一遍，当然在这过程中需要配合上哈希表来记录已经访问过的元素。这里再熟悉一遍排列的定义吧：n的排列意思是长度为n，并且每个元素1到n只出现一次的集合，以46.全排列为例
+
+```cpp
+class Solution {
+public:
+    vector<vector<int>> permute(vector<int>& nums) {
+        vector<vector<int>> ans;
+        vector<int> path;
+        int n = nums.size();
+        vector<bool> onPath(n, false);
+
+        auto dfs = [&](auto&& dfs, int i) -> void {
+            if(i == n) {
+                ans.emplace_back(path);
+                return;
+            }
+
+            for(int j = 0; j < n; j++) {
+                if(!onPath[j]) {
+                    onPath[j] = true;
+                    path.emplace_back(nums[j]);
+                    dfs(dfs, i+1);
+                    path.pop_back();
+                    onPath[j] = false;
+                }
+            }
+        };
+
+        dfs(dfs, 0);
+
+        return ans;
+    }
+};
+```
+
 
 
 ##  乘法逆元
@@ -469,6 +576,138 @@ void solve() {
 ```
 
 不同于埃式筛，这里是从最小质因数开始筛，因为埃式筛会有很多重复筛的地方，比如12和18，他们先后会被2和3筛，所以会有重复的地方，用线性筛就只会被2筛掉
+
+
+
+##  记忆化搜索和动态规划
+
+###  记忆化搜索翻译成动态规划注意事项(步骤)
+
+以70.爬楼梯为例。首先要确保记忆化搜索跑出来的代码是正确且不超时的，然后第一点先关注的应该是递归的边界`if(i<=1)`那么i为1的时候就退出递归了，那么最后一个状态是i=2，这个时候再看递推关系式`res = dfs(dfs, i-1)+dfs(dfs, i-2);`我们发现i-2最小也是0，是不会对数组越界的，所以不需要改变递推关系式，如果会越界，就根据情况改变递推式，可以参考打家劫舍那一题。对于如果修改递推关系式的话，跟nums数组没关系，之和你的dp数组有关系，举个例子打家劫舍中`dfs(dfs, i) = max(dfs(dfs, i-1), dfs(dfs, i-2)+nums[i]);`改变递推式后为`dfs(dfs, i+2) = max(dfs(dfs, i+1), dfs(dfs, i)+nums[i]);`。再然后就是将递推变成循环，我觉得容易出现问题的地方在初始值和边界值上。初始值的话，可以看记忆化搜索的递归边界前的第一个状态，而结束边界的话我觉得要根据题意来判断，比如数组边界之类的吧
+
+
+
+###  背包问题
+
+####  01背包
+
+所有物品只能选一次，弄清楚什么是容量，什么是背包。01背包的问题通常分为三种：
+
+- 最多放...物品，求最大价值
+- 恰好放...物品，求方案数，递归返回的答案为`c==0`
+- 至少放...物品，求最小价值
+
+以494为例，这一题是求方案数的，大致模板如下
+
+```cpp
+auto dfs = [&](auto&& dfs, int i, int c) -> int {
+    if(i < 0) return c == 0;    //如果c==0表示是一个合法的方案返回1，否则不是合法方案返回0
+    int& res = memo[i][c];
+    if(res != -1) return res;
+    if(c < nums[i]) return res = dfs(dfs, i-1, c);
+    return res = dfs(dfs, i-1, c) + dfs(dfs, i-1, c-nums[i]);
+};
+```
+
+对于01背包的递推式通常为：`res = max(dfs(dfs, i-1, c) , dfs(dfs, i-1, c-nums[i])+val[i]);`，如果是求最小就将max换成min，求方案数就把max、val[i]去掉然后把逗号改成加法就行。至于为什么是改成加法呢？灵神给出了很好的解答：这叫加法原理，如果事件 A 和事件 B 是互斥的（即不能同时发生，不选 nums[i] 的同时，又选了 nums[i]），那么发生事件 A 或事件 B 的总数等于事件 A 的数量加上事件 B 的数量。
+
+
+
+####  完全背包
+
+完全背包是01背包的无约束版本，可以不用选完所有物品，任何物品可以选任意次，主要的不同就是在递推关系式上，选的话上一个状态也是i，下面是322.零钱兑换的示例代码
+
+```cpp
+class Solution {
+public:
+    int coinChange(vector<int>& coins, int amount) {
+        int n = coins.size();
+        vector<vector<int>> memo(n, vector<int>(amount+1, -1));
+        auto dfs = [&](auto&& dfs, int i, int c) -> int {
+            if(i < 0) {
+                //如果没有恰好装下那么返回一个很大的int 以便后面取min
+                return c == 0 ? 0 : INT_MAX/2;  
+            }
+
+            int& res = memo[i][c];
+            if(res != -1) return res;
+            if(c < coins[i]) return res = dfs(dfs, i-1, c);
+            return res = min(dfs(dfs, i-1, c), dfs(dfs, i, c-coins[i])+1);
+        };
+
+        int ans = dfs(dfs, n-1, amount);
+
+        return ans < INT_MAX/2 ? ans : -1;
+    }
+};
+```
+
+
+
+####  背包模板及各种问题的转化
+
+```cpp
+vector<vector<int>> memo(n, vector<int>(m+1, -1));//数组大小因题而异 不能死板硬套
+auto dfs = [&](auto&& dfs, int i int j) -> int {
+    if(i < 0) return 0;	//如果是求方案数	要写成return c == 0
+    int& res = memo[i][j];
+    if(res != -1) return res;
+    if(c < nums[i]) return res = dfs(dfs, i-1, j);	//容量小于当前物品重量搜索前一个状态
+    //如果是求方案数 逗号变成加号，val[i]去掉，max去掉 
+    //如果是完全背包 第二个状态是dfs(dfs, i, j-nums[i]) 因为完全背包可以重复选
+    return res = max(dfs(dfs, i-1, j), dfs(dfs, i-1, j-nums[i])+val[i]);
+};
+```
+
+变化细节都在注释里头了
+
+
+
+
+
+##  二进制枚举
+
+来源于atcoder374的一次讲解，当发现枚举的时候只存在两种方向的时候可以联想到二进制，达到二进制枚举的效果，这样代码会变得很简洁！题目来源于ABC374的C题，这里也贴一下实现的代码。
+
+```cpp
+void solve() {
+    int n;
+    cin >> n;
+    vector<int> a(n);
+    for(auto& ai : a) cin >> ai;
+    int ans = INT_MAX;
+    //所有可能的情况2^n次方-1
+    for(int s = 0; s < (1<<n); s++) {
+        int ga = 0, gb = 0;
+        //1---加入到b组 0---加入到a组
+        for(int i = 0; i < n; i++) {
+            if((s>>i)&1) gb += a[i];
+            else ga += a[i];
+        }
+        ans = min(ans, max(ga, gb));
+    }
+    cout << ans << "\n";
+}
+```
+
+
+
+##  枚举因子
+
+第一次遇到来源于于力扣3164.优质数对的总数II，感觉很陌生，记下来
+
+```cpp
+unordered_map<int, int> cnt;
+for(int d = 1; d*d <= n1; d++) {
+    if(n1%d) continue;  //n1不是d的倍数直接跳过
+    cnt[d]++;
+    if(d*d < n1) cnt[n1/d]++;   //不能写d*d<=n1，以9为例，如果写的小于等于那么3会记录两次
+}
+```
+
+整个过程是枚举n1的所有因子并保存到cnt哈希表中，主要优化的点在于这是个根号n的一个复杂度。
+
+
 
 
 
