--- a/算法技巧及模板总结.md
+++ b/算法技巧及模板总结.md
@@ -567,7 +567,7 @@ void solve() {
         if(isPrime[i]) primes.push_back(i);
         for(int j = 0; j < primes.size() && i*primes[j] <= n; j++) {
             isPrime[i*primes[j]] = false;
-            if(i%primes[j] == 0) break;
+            if(i%primes[j] == 0) break;	//以12为例 只能被6*2筛掉 而不能被4*3筛掉
         }
     }
 
@@ -663,6 +663,118 @@ auto dfs = [&](auto&& dfs, int i int j) -> int {
 
 
 
+###  线性dp
+
+####  最长公共子序列(LCS)
+
+通常有两种状态：1、`s1[i] == s2[j]`2、`s1[i] != s2[j]`，它们的状态来源于左、上、左上，但是在两种情况下某些状态是不必要的。下面给出1143.最长公共子序列的ac代码：
+
+记忆化搜索：
+
+```cpp
+class Solution {
+public:
+    int longestCommonSubsequence(string text1, string text2) {
+        int n = text1.size(), m = text2.size();
+        vector<vector<int>> memo(n, vector<int>(m, -1));
+        auto dfs = [&](auto&& dfs, int i, int j) -> int {
+            //有一个子序列遍历到头就结束
+            //边界状态也好理解 s1="",s2="abc"它们最长公共子序列长度为0，所以这里返回0
+            if(i < 0 || j < 0) return 0; 
+            int& res = memo[i][j];
+            if(res != -1) return res;
+            //相等情况下 不需要考虑dfs(i-1, j)和dfs(i, j-1)
+            if(text1[i] == text2[j]) return res = dfs(dfs, i-1, j-1)+1;
+            //不相等情况下 不需要考虑dfs(i-1, j-1)
+            return res = max(dfs(dfs, i-1, j), dfs(dfs, i, j-1));
+        };
+        return dfs(dfs, n-1, m-1);
+    }
+};
+```
+
+
+
+dp：
+
+```cpp
+class Solution {
+public:
+    int longestCommonSubsequence(string text1, string text2) {
+        int n = text1.size(), m = text2.size();
+        
+        vector<vector<int>> dp(n+1, vector<int>(m+1));
+        for(int i = 0; i < n; i++) {
+            for(int j = 0; j < m; j++) {
+                if(text1[i] == text2[j]) dp[i+1][j+1] = dp[i][j]+1;
+                else dp[i+1][j+1] = max(dp[i][j+1], dp[i+1][j]);
+            }
+        }
+        return dp[n][m];
+    }
+};
+```
+
+
+
+
+
+####  最长递增子序列
+
+大概发现了一种思路，像这种子序列问题+数据范围比较小的题目一般都是用记忆化搜索/dp来做，因为dp本质上来说就是一种暴力，只不过是一种递推的形式，递推关系式难写而已。这个就是想清楚了子问题就比较好想明白这个递推关系式了，dp[i]的最长递增子序列就是在i之前的最长递增子序列的情况下加上1，当然在这前提必须是`if(nums[j] < nums[i])`，下面是两种写法的样例：
+
+记忆化搜索：
+
+```cpp
+class Solution {
+public:
+    int lengthOfLIS(vector<int>& nums) {
+        int n = nums.size();
+        vector<int> memo(n);    //这一题memo只能初始化成0，最后return ++res表明对res进行了修改
+        auto dfs = [&](auto&& dfs, int i) -> int {
+            //if(i < 0) return 0; //这里的i不可能出现0 可以省略掉
+            int& res = memo[i];
+            if(res > 0) return res;
+            for(int j = i-1; j >= 0 ;j--) {
+                if(nums[j] < nums[i]) res = max(res, dfs(dfs, j));
+            }
+            return ++res;
+        };
+        int ans = 0;
+        for(int i = 0; i < n; i++) {
+            ans = max(ans, dfs(dfs, i));
+        }
+        return ans;
+    }
+};
+```
+
+
+
+dp：
+
+```cpp
+class Solution {
+public:
+    int lengthOfLIS(vector<int>& nums) {
+        int n = nums.size();
+
+        vector<int> dp(n+1);
+        for(int i = 0; i < n; i++) {
+            for(int j = i-1; j >= 0; j--) {
+                if(nums[j] < nums[i]) dp[i] = max(dp[i], dp[j]);
+            }
+            dp[i]++;
+        }
+        return ranges::max(dp);
+    }
+};
+```
+
+
+
+
+
 
 
 ##  二进制枚举
@@ -708,6 +820,19 @@ for(int d = 1; d*d <= n1; d++) {
 整个过程是枚举n1的所有因子并保存到cnt哈希表中，主要优化的点在于这是个根号n的一个复杂度。
 
 
+
+##  数位之和两种写法---循环、字符串
+
+```cpp
+//写法一：
+int target = 3487568927346, ans = 0;
+for(int t = target; t > 0; t /= 10) ans += target%10;
+
+//写法二：
+int target = 3487568927346, ans = 0;
+string s = to_string(target);
+for(char c : s) ans += c-'0';
+```
 
 
 
