--- a/算法技巧及模板总结.md
+++ b/算法技巧及模板总结.md
@@ -773,6 +773,80 @@ public:
 
 
 
+####  最大子数组和
+
+这种题也可以用前缀和+枚举右维护左来解决，要用dp的话，就要将dp[i]定义成nums[i]及以前的最大子数组和，然后状态定义方程就变成了：
+
+```cpp
+dp[0] = nums[0];
+for(int i = 1; i < nums.size(); i++) dp[i] = max(dp[i-1], 0) + nums[i];
+```
+
+
+
+
+
+###  状态机dp
+
+典型是买卖股票类型的题目，一般定义dp[i] [j]表示已nums[i]为结尾状态[j]的最优解。给出122.示例代码
+
+记忆化搜索：
+
+```cpp
+class Solution {
+public:
+    int maxProfit(vector<int>& prices) {
+        int n = prices.size();
+        vector<array<int, 2>> memo(n, {-1, -1});   //memo[i][0]---未持股  memo[i][1]---持股
+        auto dfs = [&](auto&& dfs, int i, bool hold) -> int {
+            if(i < 0) return hold ? INT_MIN : 0;    //不可能还没遍历数组就出现持股状态
+            int& res = memo[i][hold];
+            if(res != -1) return res;
+            if(hold) return res = max(dfs(dfs, i-1, true), dfs(dfs, i-1, false)-prices[i]);
+            return res = max(dfs(dfs, i-1, false), dfs(dfs, i-1, true)+prices[i]);
+        };
+        return dfs(dfs, n-1, 0);
+    }
+};
+```
+
+
+
+dp：
+
+```cpp
+class Solution {
+public:
+    int maxProfit(vector<int>& prices) {
+        int n = prices.size();
+
+        vector<array<int, 2>> dp(n+1);
+        dp[0][1] = INT_MIN;
+        for(int i = 0; i < n; i++) {
+            for(int j = 0; j < 2; j++) {
+                if(j) dp[i+1][j] = max(dp[i][1], dp[i][0]-prices[i]);
+                else dp[i+1][j] = max(dp[i][0], dp[i][1]+prices[i]);
+            }
+        }
+        return dp[n][0];
+    }
+};
+```
+
+其实递归的入口准确来说应该是`max(dfs(n-1, 0), dfs(n-1, 1))`，但是如果最后一天还持有股票的话利润一定比未持有股票的利润少，所以就没有必要写`dfs(n-1, 1)`
+
+
+
+###  区间dp
+
+这个dp的特点是：通常是在一个区间序列上进行操作，例如对一个数组的子区间进行合并、计算最优值等操作。问题的解通常与区间的划分和组合有关。 
+
+
+
+###  树型dp
+
+
+
 
 
 
