--- a/十月刷题笔记.md
+++ b/十月刷题笔记.md
@@ -1344,3 +1344,286 @@ public:
 };
 ```
 
+
+
+
+
+##  3164优质数对的种数(枚举因子、枚举倍数)
+
+枚举因子：
+
+```cpp
+class Solution {
+public:
+    long long numberOfPairs(vector<int>& nums1, vector<int>& nums2, int k) {
+        unordered_map<int, int> cnt;
+        for(int n1 : nums1) {
+            // if(n1%k) continue;  //n1不是k的倍数直接跳过 不是k的倍数那么更不可能是k*nums2[j]的倍数
+            // n1 /= k;
+            for(int d = 1; d*d <= n1; d++) {
+                if(n1%d) continue;  //枚举因子
+                cnt[d]++;
+                if(d*d < n1) cnt[n1/d]++;   //不能写d*d<=n1，以9为例，如果写的小于等于那么3会记录两次
+            }
+        }
+
+        long long ans = 0;
+        for(int n2 : nums2) {
+            ans += cnt.count(n2*k) ? cnt[n2*k] : 0;
+        }
+        return ans;
+    }
+};
+```
+
+注释那两行是优化，取消注释然后需要把后面的n2 * k改成n2
+
+
+
+枚举倍数：
+
+```cpp
+class Solution {
+public:
+    long long numberOfPairs(vector<int>& nums1, vector<int>& nums2, int k) {
+        unordered_map<int, int> hash1, hash2;
+        int mx = 0; //维护最大值
+        for(int x : nums1) {
+            if(x%k == 0) {
+                hash1[x/k]++;
+                mx = max(mx, x/k);
+            }
+        }
+        for(int x : nums2) {
+            hash2[x]++;
+        }
+        long long ans = 0;
+        for(auto& [x, y] : hash2) {
+            long long s = 0;
+            //枚举倍数 最大不能超过hash1的最大值 每次累加x
+            for(int i = x; i <= mx; i += x) {
+                s += hash1.count(i) ? hash1[i] : 0;
+            }
+            ans += s*y;
+        }
+        return ans;
+    }
+};
+```
+
+
+
+
+
+##  2466.统计构造好字符串的方案数(记忆化搜索)
+
+```cpp
+class Solution {
+public:
+    int countGoodStrings(int low, int high, int zero, int one) {
+        vector<int> memo(high+1, -1);
+        int mod = 1e9+7;
+        auto dfs = [&](auto&& dfs, int i) -> int {
+            if(i == 0) return 1;
+            if(i < 0) return 0;
+            int& res = memo[i];
+            if(res != -1) return res;
+            return res = (dfs(dfs, i-zero) + dfs(dfs, i-one))%mod;
+        };
+        int ans = 0;
+        for(int i = low; i <= high; i++) {
+            ans = (ans+dfs(dfs, i))%mod;
+        }
+        return ans;
+    }
+};
+```
+
+
+
+```go
+func countGoodStrings(low int, high int, zero int, one int) int {
+    mod := 1_000_000_007
+    memo := make([]int, high+1)
+    for i := range memo {
+        memo[i] = -1
+    }
+    var dfs func(int) int
+    dfs = func(i int) int {
+        if i == 0 {
+            return 1
+        }
+        if i < 0 {
+            return 0
+        }
+        res := &memo[i]
+        //表示没有计算过
+        if *res == -1 {
+            *res = (dfs(i-zero)+dfs(i-one))%mod
+        }
+        return *res
+    }
+
+    ans := 0
+    for i := low; i <= high; i++ {
+        ans = (ans+dfs(i))%mod
+    }
+    return ans
+}
+```
+
+这一题摸爬滚打地竟然把这一题ac了！？我还挺纳闷的，突然感觉记忆化搜索挺好想的，反而这一题要转化成dp还挺复杂的。也是好久没写go了，这dfs用go写感觉还挺复杂，首先是res那里和cpp有点不一样
+
+
+
+##  1749.任意子数组和的绝对值的最大值(前缀和)
+
+```cpp
+class Solution {
+public:
+    int maxAbsoluteSum(vector<int>& nums) {
+        int mx = 0, mn = 0, s = 0;
+        for(int x : nums) {
+            s += x;
+            mx = max(mx, s);
+            mn = min(mn, s);
+        }
+        return mx-mn;
+    }
+};
+```
+
+
+
+```go
+func maxAbsoluteSum(nums []int) int {
+    mx, mn, s := 0, 0, 0
+    for _, x := range nums {
+        s += x
+        mx = max(mx, s)
+        mn = min(mn, s)
+    }
+    return mx-mn
+}
+```
+
+被这个绝对值搞蒙蔽了，但这样写法的前缀和也挺妙的。下面是灵神的理解：如果最大值在最小值右边，那么算的是最大子数组和。如果最大值在最小值左边，那么算的是最小子数组和的绝对值（相反数）
+
+
+
+##  543.二叉树的直径(dfs)
+
+```cpp
+class Solution {
+public:
+    int diameterOfBinaryTree(TreeNode* root) {
+        int ans = 0;
+        auto dfs = [&](auto&& dfs, TreeNode* root) -> int {
+            if(root == nullptr) return -1;
+            int llen = dfs(dfs, root->left)+1;
+            int rlen = dfs(dfs, root->right)+1;
+            ans = max(llen+rlen, ans);
+            return max(llen, rlen);
+        };
+        dfs(dfs, root);
+        return ans;
+    }
+};
+```
+
+分析子问题的能力还是很欠缺，首先要分析出来我们要递归所有拐点，然后就是利用这个拐点求出左右节点的最长路径+2，代码中没有出现+2是因为在计算llen和rlen就分别+1了。还有就是扫盲了一个点，有返回值的函数是不一定需要变量来接收的，唉，这是基础知识，但是对于void的函数如果你用一个变量去接收的话肯定是不行的
+
+
+
+##  124.二叉树中的最大路径和(dfs)
+
+```cpp
+class Solution {
+public:
+    int maxPathSum(TreeNode* root) {
+        int ans = INT_MIN;
+        auto dfs = [&](auto&& dfs, TreeNode* root) -> int {
+            if(root == nullptr) return 0;
+            int lval = dfs(dfs, root->left);
+            int rval = dfs(dfs, root->right);
+            ans = max(ans, lval+rval+root->val);
+            return max(max(lval, rval)+root->val, 0);
+        };
+        dfs(dfs, root);
+        return ans;
+    }
+};
+```
+
+这一题和上一题很像，只不过考虑的地方更多了，这里是求节点上的最大和，自己写错的地方主要是在初始化和递推式上，由于会出现负数，所以初始化为INT_MIN，返回的时候为什么要和0取max呢？主要原因是在一定不会选负数的情况，所以和0取max就是选或不选0的情况
+
+
+
+##  3186.施咒的最大总伤害&740.删除并获得点数(记忆化搜索、二分)
+
+记忆化搜索：
+
+```cpp
+class Solution {
+public:
+
+    long long maximumTotalDamage(vector<int>& power) {
+        map<int, int> cnt;  //用unordered_map也行，只不过后面初始化完a后要排序一下
+        for(int p : power) cnt[p]++;
+        vector<pair<int, int>> a(cnt.begin(), cnt.end());   //a是按照power[i]排序的
+        int n = a.size();
+
+        //找到第一个大于等于target的下标
+        auto lowerBound = [&](int target) -> int {
+            int l = -1, r = n;
+            while(l+1 < r) {
+                int mid = l+(r-l)/2;
+                if(a[mid].first >= target) r = mid;
+                else l = mid;
+            }
+            return r;
+        };
+        
+        vector<long long> memo(n, -1);
+        auto dfs = [&](auto&& dfs, int i) -> long long {
+            if(i < 0) return 0;
+            long long& res = memo[i];
+            if(res != -1) return res;
+            auto& [x, y] = a[i];
+            //int j = i-1;
+            //while(j >= 0 && a[j].first >= x-2) j--; //线性往前找
+            int j = lowerBound(x-2)-1;  //由于有序，可以二分查找
+            return res = max(dfs(dfs, i-1), dfs(dfs, j)+(long long)x*y);
+        };
+        return dfs(dfs, n-1);
+    }
+};
+```
+
+
+
+dp：
+
+```cpp
+class Solution {
+public:
+
+    long long maximumTotalDamage(vector<int>& power) {
+        map<int, int> cnt;  //用unordered_map也行，只不过后面初始化完a后要排序一下
+        for(int p : power) cnt[p]++;
+        vector<pair<int, int>> a(cnt.begin(), cnt.end());   //a是按照power[i]排序的
+        int n = a.size();
+        vector<long long> dp(n+1);
+        for(int i = 0, j = 0; i < n; i++) {
+            auto& [x, y] = a[i];
+            while(a[j].first < x-2) j++;
+            dp[i+1] = max(dp[i], dp[j]+(long long)x*y);
+        }
+        return dp.back();
+    }
+};
+```
+
+两个题本质都是一样的，只是往前找的范围变了一点点，二分的方法可用可不用，其实也没有很大必要，毕竟只相差2，直接线性往前找就行。这一题有两个难点：1、构造出这个a数组。2、分析出动态规划并写出递推式。灵神将这一题归纳到值域的打家劫舍，确实这么一说也很有道理，打家劫舍是对下标的限制，这种就是对值进行了限制，然后就是构造出a数组，a数组又是根据值域排序的，这样就将值域又转化成了下标
+
+对于dp的转化也是第一次见哈，自己写的时候还定义出了二维的dp数组，实际上其实是一维的。只有dfs函数有两个参数的时候才是二维数组，这一点得注意了
