--- a/练习赛合集.md
+++ b/练习赛合集.md
@@ -971,6 +971,33 @@ public:
 
 
 
+###  双周赛141
+
+####  构造最小位运算数组I&II(位运算)
+
+```cpp
+class Solution {
+public:
+    vector<int> minBitwiseArray(vector<int>& nums) {
+        for(int i = 0; i < nums.size(); i++) {
+            if(nums[i] == 2) nums[i] = -1;
+            else {
+                int t = ~nums[i];
+                int lb = t&-t;
+                nums[i] = lb>>1^nums[i];
+            }
+        }
+        return nums;
+    }
+};
+```
+
+主要是发现规律，其实在比赛的时候也意识到了要找出规律，关键就是找不到规律，这种明白出题人的思路但是想不对的时候真挺膈应啊。如果是偶数的话答案一定是-1，偶数或上一个奇数一定是奇数。其它情况的话就是要找到最低位0的右边一位，将其置为0即可。这里就用到一个写法，叫lowbit，目的是取出最末尾的1，但是这里是取0怎么办？先将nums[i]取反，这样最末尾的0的位置就变成了1，然后将nums[i]和lb异或运算就变成了想要的那个值
+
+
+
+
+
 
 
 
@@ -1972,3 +1999,91 @@ void solve() {
 
 
 总结：这场比较偏思维，题意有点误导人的意思，感觉属于是高中那种做易错题的感觉，题干就是让你往它设计的坑上跳，比较像周赛前三题的感觉，很多需要技巧或者猜的思想，这一点其实也挺重要的。
+
+
+
+
+
+##  AtCoder
+
+###   ABC374
+
+####  C
+
+dfs搜索：
+
+```cpp
+int ans = 2e9+5, n;
+int a[25];
+void dfs(int step, int ga, int gb) {
+    if(step == n) {
+        ans = min(ans, max(ga, gb));
+        return;
+    }
+
+    //选ga
+    dfs(step+1, ga+a[step], gb);
+
+    //选gb
+    dfs(step+1, ga, gb+a[step]);
+}
+
+void solve() {
+    cin >> n;
+    for(int i = 0; i < n; i++) cin >> a[i];
+    dfs(0, 0, 0);
+    cout << ans << "\n";
+}
+```
+
+这个题没想到能用到dfs搜索，的确数据范围很小，用dfs确实不用担心超时怎么的，这一题的dfs思路和选或不选很像
+
+
+
+二进制枚举：
+
+```cpp
+void solve() {
+    int n;
+    cin >> n;
+    vector<int> a(n);
+    for(auto& ai : a) cin >> ai;
+    int ans = INT_MAX;
+    for(int s = 0; s < (1<<n); s++) {
+        int ga = 0, gb = 0;
+        for(int i = 0; i < n; i++) {
+            if((s>>i)&1) gb += a[i];
+            else ga += a[i];
+        }
+        ans = min(ans, max(ga, gb));
+    }
+    cout << ans << "\n";
+}
+```
+
+wc好妙的写法！由于只会出现分配到a和b组两种情况，所以就用到这个二进制枚举的方法，第一个for循环作用就是从0到2^n次方-1次。这里是遇到1就加到b组中，遇到0就加到a组中。好方法！
+
+
+
+###  ABC375
+
+####  D-ABA(枚举右、维护左)
+
+```cpp
+void solve() {
+    string s;
+    cin >> s;
+    vector<int> cnt(26), sum(26);
+    int ans = 0;
+    for(int i = 0; i < s.size(); i++) {
+        int c = s[i]-'A';
+        if(i >= 2) ans += cnt[c]*(i-1)-sum[c];
+        cnt[c]++;
+        sum[c] += i;
+    }
+    cout << ans << "\n";
+}
+```
+
+看完题解后发现很像枚举右、维护左的思想，关键就是在于优化这个平方的复杂度，考虑到每次ans累加的是r-l-1，所以就用了一个哈希数组和一个符合条件的和的数组来维护左边，这样就达到了On的做法的
+
