--- a/十月刷题笔记.md
+++ b/十月刷题笔记.md
@@ -1627,3 +1627,29 @@ public:
 两个题本质都是一样的，只是往前找的范围变了一点点，二分的方法可用可不用，其实也没有很大必要，毕竟只相差2，直接线性往前找就行。这一题有两个难点：1、构造出这个a数组。2、分析出动态规划并写出递推式。灵神将这一题归纳到值域的打家劫舍，确实这么一说也很有道理，打家劫舍是对下标的限制，这种就是对值进行了限制，然后就是构造出a数组，a数组又是根据值域排序的，这样就将值域又转化成了下标
 
 对于dp的转化也是第一次见哈，自己写的时候还定义出了二维的dp数组，实际上其实是一维的。只有dfs函数有两个参数的时候才是二维数组，这一点得注意了
+
+
+
+##  2606.找到最大开销的子数组(dp)
+
+```cpp
+class Solution {
+public:
+    int maximumCostSubstring(string s, string chars, vector<int>& vals) {
+        unordered_map<char, int> hash;
+        for(int i = 0; i < chars.size(); i++) hash[chars[i]] = vals[i];
+        vector<int> nums;
+        for(int i = 0; i < s.size(); i++) {
+            if(hash.count(s[i])) nums.emplace_back(hash[s[i]]);
+            else nums.emplace_back(s[i]-'a'+1);
+        }
+        vector<int> dp(nums.size());
+        dp[0] = max(0, nums[0]);
+        for(int i = 1; i < dp.size(); i++) {
+            dp[i] = max(dp[i-1], 0)+nums[i];
+        }
+        return *max_element(dp.begin(), dp.end());
+    }
+};
+```
+
